added images for success and failure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div style="text-align:center;color:#0eaf8f">
   <h1>
-    Welcome to Brick-Ball game !!!
+   Brick-Ball Game
   </h1>
 </div>
 <router-outlet></router-outlet>
