--- a/src/app/brick-ball/brick-ball.component.html
+++ b/src/app/brick-ball/brick-ball.component.html
@@ -1,13 +1,7 @@
-<div class="loading" *ngIf="success">
-    <div class="center">
-        <img src=".././assets/images/thumbsup.jpeg" height="300px" width="300px" />
-    </div>
+<div class="loading"  [hidden]="!success" >
+    <img class="center" src=".././assets/images/win.jpg" width="480" height="500" />
 </div>
-<div class="loading" *ngIf="fail">
-    
-    <div class="center">
-            <p><b><i>You Fail!!! Try Again!!!</i></b></p>
-        <img src=".././assets/images/sad.jpg" height="300px" width="300px" />
-    </div>
+<div class="loading"  [hidden]="!fail">
+    <img class="center" src=".././assets/images/fail.jpg" width="480" height="500" />
 </div>
 <canvas id="brickCanvas" width="480" height="500" #brickCanvas></canvas>
