--- a/src/app/brick-ball/brick-ball.component.html
+++ b/src/app/brick-ball/brick-ball.component.html
@@ -1,5 +1,5 @@
 <div class="loading"  [hidden]="!success" >
-    <img class="center" src=".././assets/images/win.jpg" width="480" height="500" />
+    <img class="center" src="https://s3.amazonaws.com/uploads.hipchat.com/8700/1569872/TYA6Vcm81fag4we/win.jpg" width="480" height="500" />
 </div>
 <div class="loading"  [hidden]="!fail">
     <img class="center" src=".././assets/images/fail.jpg" width="480" height="500" />
